--- a/src/index.css
+++ b/src/index.css
@@ -10,12 +10,12 @@
 @layer base {
   html {
     font-family: Questrial, system-ui, sans-serif;
+    overflow: hidden;
   }
 }
-
 @layer components {
   .slide {
-    @apply absolute dark:bg-black min-h-full w-full flex justify-center px-10 items-center opacity-0;
+    @apply absolute p-10 sm:p-20 mid:p-10 dark:bg-black min-h-full w-full flex justify-center px-10 items-center opacity-0;
   }
   .slideBox {
     @apply dark:text-[#ffffffb3] flex flex-col justify-center gap-4 max-w-[720px] w-full mx-auto;
@@ -34,6 +34,56 @@
   visibility: visible;
   color: white;
 }
+.loader-line {
+  width: 200px;
+  height: 3px;
+  position: relative;
+  overflow: hidden;
+  background-color: #ddd;
+  margin: 100px auto;
+  border-radius: 20px;
+}
+
+.loader-line:before {
+  content: "";
+  position: absolute;
+  left: -50%;
+  height: 3px;
+  width: 40%;
+  background-color: rgb(0, 119, 255);
+  -webkit-animation: lineAnim 1s linear infinite;
+  animation: lineAnim 1s linear infinite;
+  border-radius: 20px;
+}
+
+@-webkit-keyframes lineAnim {
+  0% {
+    left: -40%;
+  }
+  50% {
+    left: 20%;
+    width: 80%;
+  }
+  100% {
+    left: 100%;
+    width: 100%;
+  }
+}
+
+@keyframes lineAnim {
+  0% {
+    left: -40%;
+  }
+  50% {
+    left: 20%;
+    width: 80%;
+  }
+  100% {
+    left: 100%;
+    width: 100%;
+  }
+}
+
 .blink {
   -webkit-animation: 0.25s ease 0s 2 normal none running;
   animation: 0.25s ease 0s 2 normal none running;
@@ -68,6 +118,7 @@
     color: white;
   }
 }
+
 .transition-blink {
   transition-property: background-color, color, border-color, box-shadow,
     opacity;
